data-gateway-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-gateway-service
  namespace: prod
spec:
  selector:
    app: data-gateway-service
  ports:
  - name: data-gateway-service
    port: 8081
