data-gateway-service/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-gateway-service
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: data-gateway-service
    component: data-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: data.eproc.dev
    http:
      paths:
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: data-gateway-service
            port:
              number: 8081
